tests/snapshots/test_runner__tests__compiler__typecheck__explicit_type_variable_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
type Tuple<Left Right> = {left: Left right: Right}

type Foo = Tuple<Integer>

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/explicit_type_variable_2.kk:3:17
  │
3 │ type Foo = Tuple<Integer>
  │                 ^^^^^^^^^ Type arguments length mismatch
  │
  = 1 type arguments are given, but expected 2:
      Left
      Right
