tests/snapshots/test_runner__tests__compiler__typecheck__function_arguments_mismatch.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
{
  let f : (n: Integer) => Integer = (x, y) => x
}

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/function_arguments_mismatch.kk:2:37
  │
2 │   let f : (n: Integer) => Integer = (x, y) => x
  │                                     ^^^^^^ Arguments length mismatch
  │
  = Expected 1 argument only, but 2 arguments are provided.
