tests/snapshots/test_runner__tests__compiler__typecheck__function_generalization_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let f = | {x, y {z,}} => {x, z,}
let x: {x: String z: Integer} = {x "hi" y {z 3}}.f()
let y: {x: String z: Integer} = {x 2 y {z 3}}.f()

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/function_generalization_2.kk:3:33
  │
3 │ let y: {x: String z: Integer} = {x 2 y {z 3}}.f()
  │                                 ^^^^^^^^^^^^^^^^^ Type mismatch
  │
  = +----------------+----------------+
    | EXPECTED TYPE  |  ACTUAL TYPE   |
    +----------------+----------------+
    |   {            |   {            |
    |     x:         |     x:         |
    | -     String,  | +     Integer, |
    |     z:         |     z:         |
    |       Integer, |       Integer, |
    |   }            |   }            |
    +----------------+----------------+
